--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/growr-xyz/vc-issuer/blob/main/README.md",
   "dependencies": {
+    "@growr/vc-json-schemas": "file:./vc-json-schemas",
     "@rsksmart/rif-id-ethr-did": "^0.1.0",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
