--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
     "crypto-js": "^4.1.1",
+    "daf-selective-disclosure": "^6.0.0",
     "did-jwt-vc": "^2.1.9",
     "did-resolver": "^2.1.2",
     "dotenv": "^10.0.0",
