--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "growr vc issuer for POC 2",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,7 +24,7 @@
   "homepage": "https://github.com/growr-xyz/vc-issuer/blob/main/README.md",
   "dependencies": {
     "@growr/vc-json-schemas": "file:./vc-json-schemas",
-    "@growr/vc-json-schemas-parser": "file:vc-json-schemas-parser",
+    "@growr/vc-json-schemas-parser": "file:./vc-json-schemas-parser",
     "@rsksmart/rif-id-ethr-did": "^0.1.0",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
