--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "growr vc issuer for POC 2",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "docker compose up mongodb -d & node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
